Add separator and increase spacing
...Between "Remove" & "Edit Partition" buttons, to prevent accidental clicks on "Remove". Improves on e4b74747f18852962d7a648fece7ba310128d1eb

--- a/linstaller/modules/partdisks/front/glade/module.glade
+++ b/linstaller/modules/partdisks/front/glade/module.glade
@@ -2029,6 +2029,16 @@ option for your system.</property>
                         <property name="stock_id">gtk-remove</property>
                       </object>
                       <packing>
+                        <property name="expand">True</property>
+                        <property name="homogeneous">True</property>
+                      </packing>
+                    </child>
+                    <child>
+                      <object class="GtkSeparatorToolItem" id="toolbar_separator">
+                        <property name="visible">True</property>
+                        <property name="can_focus">False</property>
+                      </object>
+                      <packing>
                         <property name="expand">False</property>
                         <property name="homogeneous">True</property>
                       </packing>
